--- a/phoenix/static/src/styles/components/_subsection.scss
+++ b/phoenix/static/src/styles/components/_subsection.scss
@@ -111,6 +111,9 @@
   // Structure
   margin-top: 1rem;
 
+  // Border
+  border-bottom: none;
+
   @media only screen and (min-width: $bp-mobile) {
     // Structure
     margin-top: 2rem;
